--- a/HW6_sac820/building_nrg_instructions.ipynb
+++ b/HW6_sac820/building_nrg_instructions.ipynb
@@ -16,7 +16,6 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -87,7 +86,6 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -104,7 +102,6 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -144,7 +141,6 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -186,7 +182,6 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -201,7 +196,6 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -307,7 +301,6 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -398,7 +391,6 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": false,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -443,7 +435,6 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
-    "collapsed": false,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -507,7 +498,6 @@
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {
-    "collapsed": false,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -678,7 +668,6 @@
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {
-    "collapsed": false,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -799,7 +788,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -850,7 +838,6 @@
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {
-    "collapsed": false,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -905,7 +892,6 @@
    "cell_type": "code",
    "execution_count": 49,
    "metadata": {
-    "collapsed": false,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -968,14 +954,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -994,20 +980,13 @@
    "user_envs_cfg": false
   },
   "toc": {
-   "colors": {
-    "hover_highlight": "#DAA520",
-    "running_highlight": "#FF0000",
-    "selected_highlight": "#FFD700"
-   },
-   "moveMenuLeft": true,
    "nav_menu": {
     "height": "228px",
     "width": "252px"
    },
-   "navigate_menu": true,
    "number_sections": false,
    "sideBar": true,
-   "threshold": 4,
+   "skip_h1_title": true,
    "toc_cell": false,
    "toc_position": {
     "height": "323px",
@@ -1021,5 +1000,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
