--- a/HW6_sac820/Lab6_sac820.ipynb
+++ b/HW6_sac820/Lab6_sac820.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\" style=\"margin-top: 1em;\"><ul class=\"toc-item\"></ul></div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
@@ -772,6 +782,16 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.3"
+  },
+  "toc": {
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": true,
+   "toc_cell": true,
+   "toc_position": {},
+   "toc_section_display": "block",
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
