--- a/HW3_sac820/Assignment2.ipynb
+++ b/HW3_sac820/Assignment2.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\" style=\"margin-top: 1em;\"><ul class=\"toc-item\"><li><span><a href=\"#Figure-1:-A-histogram-of-the-age-distribution-of-users-suggests-that-the-majority-of-users-is-less-than-45\" data-toc-modified-id=\"Figure-1:-A-histogram-of-the-age-distribution-of-users-suggests-that-the-majority-of-users-is-less-than-45-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Figure 1: A histogram of the age distribution of users suggests that the majority of users is less than 45</a></span></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Significance Test for a Proportion using CitiBike Data"
@@ -573,6 +583,22 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
    "version": "2.7.12"
+  },
+  "toc": {
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": false,
+   "skip_h1_title": true,
+   "toc_cell": true,
+   "toc_position": {
+    "height": "260px",
+    "left": "27px",
+    "right": "20px",
+    "top": "84px",
+    "width": "145px"
+   },
+   "toc_section_display": "block",
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
