--- a/HW3_sac820/Assignment3.ipynb
+++ b/HW3_sac820/Assignment3.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\" style=\"margin-top: 1em;\"><ul class=\"toc-item\"></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "$$Z = \\dfrac{\\mu_{population} - \\mu_{sample}}{\\frac{\\sigma}{\\sqrt{N}}}$$"
@@ -177,6 +187,16 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
    "version": "2.7.12"
+  },
+  "toc": {
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": true,
+   "toc_cell": true,
+   "toc_position": {},
+   "toc_section_display": "block",
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
