--- a/HW11_sac820/HW11_sac820.ipynb
+++ b/HW11_sac820/HW11_sac820.ipynb
@@ -1742,25 +1742,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "All clusters had a generally similar trend, but it was the magnitude that changed. In the places with intense change, we could possibly posit that it is due to gentrification which the city has seen quite a lot if in specific neighborhoods.  "
+   ]
   }
  ],
  "metadata": {
